# simple-pty

./: README.md  exceptions.py  pyproject.toml  spty.py  streaming.py
.github/workflows/: python-publish.yml
integration/: Makefile  init.sh
intergration/test-top/: test.py
signals/: SIGINT.py
spty/: __init__.py  streaming.py
spty/signals/: SIGINT.py  SIGTSTP.py  SIGWINCH.py  __init__.py
